Bug 325341 - Payees view Transactions tab - Column widths not optimum when the transaction form is disabled
Summary: Payees view Transactions tab - Column widths not optimum when the transaction...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-26 19:42 UTC by allan
Modified: 2013-09-29 07:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2013-09-26 19:42:12 UTC
I didn't go looking for this - I encountered it when searching for a payee.

My screen width is 1920px. With the Payees view window at full width, the Transactions tab window is about half that.  The Date, Payment and Deposit columns are about the same width, but the Deposit column is empty, the Date column is half empty and the Payment column is about 60% empty.  No problem at this stage, but I don't operate with this window size.
If I reduce the KMM window size to a more typical 1000 - 1100px, the Date, Payee and Deposit columns have retained their previous width and emptyness.  The Details column has disappeared, and the Account column shows about five characters.
Shrinking now to 800-900px, the Payment and Deposit columns are untouched, the Details and Account columns have disappeared and the Date column is now reducing.
Shrinking further, and just before a horizontal scroll bar appears, the Date and Account column are the only shows, both with much empty space.  When the scroll-bar appears, the Date and Account columns are showing, clicking in the empty scroll-bar region produces an empty window, and a final click to the right shows the Date and Account columns again for some reason.  The other columns are nowhere to be seen.



Reproducible: Always

Steps to Reproduce:
As above.
Actual Results:  
Weird!  As above.

Expected Results:  
Allocate column widths according to their content, with spare width going to the details column.  Allow all columns to reduce to a minimum, rather that exhibiting flagrant favouritism.
Scrolling should give sensible results.
Comment 1 Cristian Oneț 2013-09-27 06:42:06 UTC
Since the transactions list in the payees view is read only the in-place transaction editor should not be considered while auto adjusting the column sizes.
Comment 2 Cristian Oneț 2013-09-29 07:29:36 UTC
Git commit 586442a2da540c25ce9030d900a57ba579eb05d5 by Cristian Oneț.
Committed on 28/09/2013 at 08:16.
Pushed by conet into branch 'master'.

Improve the column sizes auto adjustment of the register when the
transaction form is disabled and the register is in read only mode.
This improves register column sizes in the Payee, Tags views and in
the transaction search and autofill dialogs.
REVIEW: 112971

M  +1    -0    kmymoney/views/kgloballedgerview.cpp
M  +4    -3    kmymoney/widgets/register.cpp
M  +11   -0    kmymoney/widgets/register.h

http://commits.kde.org/kmymoney/586442a2da540c25ce9030d900a57ba579eb05d5
Comment 3 Cristian Oneț 2013-09-29 07:48:14 UTC
Git commit 4152c5b933c6d6b1a632dc74b983772b19b53bbd by Cristian Oneț.
Committed on 28/09/2013 at 08:16.
Pushed by conet into branch '4.6'.

Improve the column sizes auto adjustment of the register when the
transaction form is disabled and the register is in read only mode.
This improves register column sizes in the Payee, Tags views and in
the transaction search and autofill dialogs.
REVIEW: 112971
(cherry picked from commit 586442a2da540c25ce9030d900a57ba579eb05d5)

M  +1    -0    kmymoney/views/kgloballedgerview.cpp
M  +4    -3    kmymoney/widgets/register.cpp
M  +11   -0    kmymoney/widgets/register.h

http://commits.kde.org/kmymoney/4152c5b933c6d6b1a632dc74b983772b19b53bbd