Improve the column sizes auto adjustment of the register when the transaction form is disabled and the register is in read only mode. This improves register column sizes in the Payee, Tags views and in the transaction search and autofill dialogs.

BUG: 325341
REVIEW: 112971
(cherry picked from commit 586442a2da540c25ce9030d900a57ba579eb05d5)